# MillionAnimals

./: .bumpversion.cfg  .comet.config  .gitignore  .readthedocs.yaml  CONVERSION_SUMMARY.md  README.md  pyproject.toml  submit_DeepForest.sh
.github/workflows/: python-package.yml
data_prep/: Alejandro_Chile.py  Araujo_2020.py  BCI.py  Beloiu2023.py  DATASET_TEMPLATE.py  DetectTree2.py  Firoze2023.py  Harz_Mountain.py  Hickman2021.py  Jansen2023.py  NEON_points.py  NeonBenchmark.py  NeonTreeEvaluation.py  OliveTrees_spain.py  README.md  Radogoshi_Sweden.py  ReForestTree.py  Ryoungseob2023.py  SPREAD.py  Santos2019.py  SiDroneForest.py  Tonga.py  TreeFormer.py  Troles_bamberg.py  UrbanLondon.py  Velasquez-Camacho.py  Ventura2022.py  WRI.py  Wagner.py  annotation_loop.py  environment.yml  individual_urban_tree_crown_detection.py  justdiggit.py  label_studio_utils.py  package_datasets.py  select_tiles_for_labelstudio.py  utilities.py
data_prep/source_registry/: README.md  airborne_sources_registry.csv  contact_author_email_drafts.md  generate_airborne_registry.py  open_download_candidates.md  ready_to_download_links.csv  ready_to_download_links.md
data_prep/sources_airborne/: a_comparison_of_thermal_drones_and_camera_trap_population_estimates_for_sitka_black_tailed.py  an_experimental_approach_to_evaluate_the_potential_of_drones_in_terrestrial_mammal_researc.py  bootstrap_animalboxes_v01.py  detecting_african_hoofed_animals_in_aerial_imagery_using_convolutional_neural_network.py  (+3 more)
docs/: CNAME  conf.py  contributing.md  dataset_structure.md  datasets.md  developer.md  evaluation.md  getting_started.md  index.rst  leaderboard.md  submission_guidelines.md  training.md
docs/examples/: Datasets.ipynb  baseline_boxes.ipynb  (+2 more)
tests/: conftest.py  test_AnimalBoxes.py  test_AnimalPoints.py  test_AnimalPolygons.py  test_millionanimals.py  test_release.py  test_versions.py
trained_models/: README.md
weights/: DeepForest.py
(+22 files in other folders)
